fix: Hamburger icon on mobile (#3453)
* fix: Hamburger-icon

* removed additional padding for MUI IconButton, added padding for the child element instead adhereing to the style variable

* Update src/components/common/Header/styles.module.css

---------

--- a/src/components/common/Header/styles.module.css
+++ b/src/components/common/Header/styles.module.css
@@ -70,10 +70,6 @@
 }
 
 @media (max-width: 599.95px) {
-  .menuButton {
-    padding-left: var(--space-2);
-  }
-
   .hideMobile {
     display: none;
   }
